base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sis-ns-manager
spec:
  selector:
    app: sis-ns-manager
  ports:
    - port: 3001
      targetPort: 3001
