base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sis-ns-manager
spec:
  to:
    kind: Service
    name: sis-ns-manager
  port:
    targetPort: 3001
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
